syntax = "proto3";

// Doc: https://developers.google.com/protocol-buffers/docs/proto3

package com.bdps.special_service_item;

option java_package = "com.bdps.special_service_item";
option java_outer_classname = "SpecialServiceItemProto";
// option java_multiple_files = true; 这个会将类分开，避免跟model重名可以不分开，如果太大可以考虑分开
//option objc_class_prefix = "SAMPLE";

message SpecialServiceItem {
    int32 specialServiceItemId = 1;
    int32 staffId = 2;
    string status = 3;
    string unit = 4;
    string amountOrTimes = 5;
    string usedAmountOrTimes = 6;
}


message SpecialServiceItems {
    int32 page = 1;
    int32 limit = 2;
    int32 count = 3;
    repeated SpecialServiceItem nodes = 4;
}


message AddSpecialServiceItemRequest {
    int32 staffId = 2;
    string status = 3;
    string unit = 4;
    string amountOrTimes = 5;
    string usedAmountOrTimes = 6;
}
message ListSpecialServiceItemRequest {
    int32 page = 1;
    int32 limit = 2;
}
message GetSpecialServiceItemRequest {
    int32 specialServiceItemId = 1;
}

message UpdateSpecialServiceItemRequest {
    int32 specialServiceItemId = 1;
    int32 staffId = 2;
    string status = 3;
    string unit = 4;
    string amountOrTimes = 5;
    string usedAmountOrTimes = 6;
}

message DeleteSpecialServiceItemRequest {
    int32 specialServiceItemId = 1;
}
service SpecialServiceItemService {
    rpc AddSpecialServiceItem (AddSpecialServiceItemRequest) returns (SpecialServiceItem) {
    }
    rpc ListSpecialServiceItem (ListSpecialServiceItemRequest) returns (SpecialServiceItems) {
    }
    rpc GetSpecialServiceItem (GetSpecialServiceItemRequest) returns (SpecialServiceItem) {
    }
    rpc UpdateSpecialServiceItem (UpdateSpecialServiceItemRequest) returns (SpecialServiceItem) {
    }
    rpc DeleteSpecialServiceItem (DeleteSpecialServiceItemRequest) returns (SpecialServiceItem) {

    }
}
